--- a/screen4.html
+++ b/screen4.html
@@ -24,31 +24,35 @@
 					<p>Ingresa un nombre, email y clave de usuario</p>
 				</div>
 				<div class="col s12 m12 l12 xl12">
-					<div class="row">
-						<form class="col s12">
-							<div class="row">
-								<div class="input-field col s12">
-									<i class="prefix left"><img src="dist/img/user.png" alt=""></i>
-									<input id="firstname" type="text" class="validate">
-									<label class="center" for="firstname">Nombre</label>
+					<div class="container-inputs">
+						<div class="row">
+							<form class="col s12">
+								<div class="row">
+									<div class="input-field col s12">
+										<i class="prefix left"><img src="dist/img/user.png" alt=""></i>
+										<input id="firstname" type="text" >
+										<label class="center" for="firstname">Nombre</label>
+									</div>
+									<div class="input-field col s12">
+										<i class="prefix left"><img src="dist/img/message-gray.png" alt=""></i>
+										<input id="email" type="tel" >
+										<label for="email">correo@ejemplo.com</label>
+									</div>
+									<div class="input-field col s12">
+										<i class="prefix left"><img src="dist/img/lock.png" alt=""></i>
+										<input id="password" type="tel">
+										<label for="password">Ingresa clave de 6 digítos</label>
+									</div>
 								</div>
-								<div class="input-field col s12">
-									<i class="prefix left"><img src="dist/img/message-gray.png" alt=""></i>
-									<input id="icon_email" type="tel" class="validate">
-									<label for="icon_email">correo@ejemplo.com</label>
-								</div>
-								<div class="input-field col s12">
-									<i class="prefix left"><img src="dist/img/lock.png" alt=""></i>
-									<input id="icon_lock" type="tel" class="validate">
-									<label for="icon_telephone">Ingresa clave de 6 digítos</label>
-								</div>
+							</form>
+
+							<div class="col s12 m12 l12 center">
+								<h6>Cuida esta clave como oro, es tú acceso a yape.</h6>
 							</div>
-						</form>
-						<div class="col s12 m12 l12 center">
-							<h6>Cuida esta clave como oro, es tú acceso a yape.</h6>
+
 						</div>
 						<div class="col s12 m12 l12 center">
-							<button id="createUser" class="btn waves-effect waves-light yellow-button" type="submit" name="action">Crear Cuenta
+							<button id="sign-session" class="btn waves-effect waves-light yellow-button" type="submit" name="action">Crear Cuenta
 							</button>
 						</div>
 					</div>
