--- a/screen2.html
+++ b/screen2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 	<meta charset="UTF-8">
@@ -13,7 +13,37 @@
 </head>
 
 <body>
-	
+	<section id="validacion">
+		<div class="row">
+			<div class="col s12 center">
+				<img src="dist/img/phone.png" class="circle responsive-img" width="150x150">
+				<h5 solid>Para comenzar validamos tu número</h5>
+				<label>Recibirás un SMS con un código de validación</label>
+				<div class="row">
+					<form class="col s10">
+					<div class="row caja">
+						<div>
+							<img src="dist/img/cellphone.png" class=" responsive-img left" width="20x20" alt="img-cellphome">
+						</div>
+						<label for="number">(+51)</label><input id="number" type="text" class="validate">
+					</div>
+					<div class="row">
+						<div>
+							<input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
+							<label for="filled-in-box">Acepto los <a href="#" target="_blank">Términos y condiciones.</a>
+							</label>
+						</div>
+					</div>
+					</form>
+				</div>
+				<div class="row">
+					<div class="col s12">
+						<a href="#" class="btn-op waves-light btn">CONTINUAR</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 	<script src="dist/js/script.js"></script>
