working hide password

--- a/screen4.html
+++ b/screen4.html
@@ -30,17 +30,17 @@
 								<div class="row">
 									<div class="input-field col s12">
 										<i class="prefix left"><img src="dist/img/user.png" alt=""></i>
-										<input id="firstname" type="text" >
+										<input id="firstname" type="text">
 										<label class="center" for="firstname">Nombre</label>
 									</div>
 									<div class="input-field col s12">
 										<i class="prefix left"><img src="dist/img/message-gray.png" alt=""></i>
-										<input id="email" type="tel" >
+										<input id="email" type="email">
 										<label for="email">correo@ejemplo.com</label>
 									</div>
 									<div class="input-field col s12">
 										<i class="prefix left"><img src="dist/img/lock.png" alt=""></i>
-										<input id="password" type="tel">
+										<input id="password" type="password" class="form-control">		   	
 										<label for="password">Ingresa clave de 6 digítos</label>
 									</div>
 								</div>
