--- a/screen4.html
+++ b/screen4.html
@@ -26,21 +26,21 @@
 				<div class="col s12 m12 l12 xl12">
 					<div class="container-inputs">
 						<div class="row">
-							<form class="col s12">
+							<form id="myform" class="col s12">
 								<div class="row">
 									<div class="input-field col s12">
 										<i class="prefix left"><img src="dist/img/user.png" alt=""></i>
-										<input id="firstname" type="text">
-										<label class="center" for="firstname">Nombre</label>
+										<input id="name" type="text">
+										<label class="center" for="name">Nombre</label>
 									</div>
 									<div class="input-field col s12">
 										<i class="prefix left"><img src="dist/img/message-gray.png" alt=""></i>
-										<input id="email" type="email">
+										<input  id="email" type="email">
 										<label for="email">correo@ejemplo.com</label>
 									</div>
 									<div class="input-field col s12">
 										<i class="prefix left"><img src="dist/img/lock.png" alt=""></i>
-										<input id="password" type="password" class="form-control">		   	
+										<input  id="password" type="password" class="form-control" >		   	
 										<label for="password">Ingresa clave de 6 digítos</label>
 									</div>
 								</div>
