--- a/screen4.html
+++ b/screen4.html
@@ -11,7 +11,6 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="dist/css/style.min.css">
 </head>
-
 <body>
 	<section id="createUser">
 		<div class="container">
@@ -30,26 +29,21 @@
 								<div class="row">
 									<div class="input-field col s12">
 										<i class="prefix left"><img src="dist/img/user.png" alt=""></i>
-										<input id="name" type="text">
-										<label class="center" for="name">Nombre</label>
+										<input placeholder="Nombre" id="name" type="text">
 									</div>
 									<div class="input-field col s12">
 										<i class="prefix left"><img src="dist/img/message-gray.png" alt=""></i>
-										<input  id="email" type="email">
-										<label for="email">correo@ejemplo.com</label>
+										<input placeholder="correo@ejemplo.com"  id="email" type="email">
 									</div>
 									<div class="input-field col s12">
 										<i class="prefix left"><img src="dist/img/lock.png" alt=""></i>
-										<input  id="password" type="password" class="form-control" >		   	
-										<label for="password">Ingresa clave de 6 digítos</label>
+										<input placeholder="Ingresa clave de 6 digítos"  id="password" type="password" class="form-control" >		   	
 									</div>
 								</div>
 							</form>
-
 							<div class="col s12 m12 l12 center">
 								<h6>Cuida esta clave como oro, es tú acceso a yape.</h6>
 							</div>
-
 						</div>
 						<div class="col s12 m12 l12 center">
 							<button id="sign-session" class="btn waves-effect waves-light yellow-button" type="submit" name="action">Crear Cuenta
@@ -60,8 +54,6 @@
 			</div>
 		</div>
 	</section>
-
-
 	<script src="dist/js/script.js"></script>
 </body>
 
