public folder updated

--- a/screen4.html
+++ b/screen4.html
@@ -9,14 +9,14 @@
 	<script src="https://use.fontawesome.com/fb4df1f3f2.js"></script>
 	<!-- Material Icon -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="dist/css/style.min.css">
+	<link rel="stylesheet" href="public/css/style.min.css">
 </head>
 <body>
 	<section id="createUser">
 		<div class="container">
 			<div class="row">
 				<div class="col s12 m12 l12 xl12 center">
-					<img class="circle lock" src="dist/img/lockone.png" alt="">
+					<img class="circle lock" src="public/img/lockone.png" alt="">
 				</div>
 				<div class="col s12 m12 l12 xl12 center">
 					<h4>Crea tu usuario Yape</h4>
@@ -28,15 +28,15 @@
 							<form id="myform" class="col s12">
 								<div class="row">
 									<div class="input-field col s12">
-										<i class="prefix left"><img src="dist/img/user.png" alt=""></i>
+										<i class="prefix left"><img src="public/img/user.png" alt=""></i>
 										<input placeholder="Nombre" id="name" type="text">
 									</div>
 									<div class="input-field col s12">
-										<i class="prefix left"><img src="dist/img/message-gray.png" alt=""></i>
+										<i class="prefix left"><img src="public/img/message-gray.png" alt=""></i>
 										<input placeholder="correo@ejemplo.com"  id="email" type="email">
 									</div>
 									<div class="input-field col s12">
-										<i class="prefix left"><img src="dist/img/lock.png" alt=""></i>
+										<i class="prefix left"><img src="public/img/lock.png" alt=""></i>
 										<input placeholder="Ingresa clave de 6 digítos"   id="password" type="password" class="form-control" >		   	
 									</div>
 								</div>
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 	</section>
-	<script src="dist/js/script.js"></script>
+	<script src="public/js/script.js"></script>
 </body>
 
 </html>
