--- a/screen7.html
+++ b/screen7.html
@@ -9,14 +9,14 @@
 	<script src="https://use.fontawesome.com/fb4df1f3f2.js"></script>
 	<!-- Material Icon -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="dist/css/style.min.css">
+	<link rel="stylesheet" href="public/css/style.min.css">
 </head>
 
 <body>
 	
 
 
-	<script src="dist/js/script.js"></script>
+	<script src="public/js/script.js"></script>
 </body>
 
 </html>
