Screen 2, 6 y 7 sin estilos

--- a/screen2.html
+++ b/screen2.html
@@ -23,9 +23,9 @@
 					<form class="col s10">
 					<div class="row caja">
 						<div>
-							<img src="dist/img/cellphone.png" class=" responsive-img left" width="20x20" alt="img-cellphome">
+							<img src="dist/img/cellphone.png" class="responsive-img left" width="20x20" alt="img-cellphome">
+							<input id="number" type="text" class="validate" placeholder="(+51)">
 						</div>
-						<label for="number">(+51)</label><input id="number" type="text" class="validate">
 					</div>
 					<div class="row">
 						<div>
