ready to start working again

--- a/screen3.html
+++ b/screen3.html
@@ -9,7 +9,7 @@
 	<script src="https://use.fontawesome.com/fb4df1f3f2.js"></script>
 	<!-- Material Icon -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="dist/css/style.min.css">
+	<link rel="stylesheet" href="public/css/style.min.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 		</div>
 		<div class="row">
 			<div class="col s12 center">
-				<img src="dist/img/message.png" alt="">
+				<img src="public/img/message.png" alt="">
 			</div>
 		</div>
 		<div class="row">
@@ -38,7 +38,7 @@
 		<br>
 		<div class="row">
 			<div class="col s2 center">
-				<img id="lock" src="dist/img/lock.png" alt="">
+				<img id="lock" src="public/img/lock.png" alt="">
 			</div>
 			<div class="col s10 center">
 				<input id="code" type="number" placeholder="-   -   -   -   -">
@@ -47,7 +47,7 @@
 	</div>
 
 
-	<script src="dist/js/script.js"></script>
+	<script src="public/js/script.js"></script>
 </body>
 
 </html>
