--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://use.fontawesome.com/fb4df1f3f2.js"></script>
 	<!-- Material Icon -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="dist/css/style.min.css">
+	<link rel="stylesheet" href="public/css/style.min.css">
 </head>
 
 <body>
@@ -19,10 +19,10 @@
 				<!-- Carousel -->
 				<div class="carousel carousel-slider center" data-indicators="true">
 					<div class="carousel-item" href="#one!">
-						<img src="dist/img/icon-people.png" class="imgone">
+						<img src="public/img/icon-people.png" class="imgone">
 					</div>
 					<div class="carousel-item" href="#two!">
-						<img src="dist/img/party.png" class="imgdos">
+						<img src="public/img/party.png" class="imgdos">
 					</div>
 				</div>
 			</div>
@@ -40,7 +40,7 @@
 		</div>
 	</div>
 
-	<script src="dist/js/script.js"></script>
+	<script src="public/js/script.js"></script>
 </body>
 
 </html>
