--- a/screen2.html
+++ b/screen2.html
@@ -9,21 +9,21 @@
 	<script src="https://use.fontawesome.com/fb4df1f3f2.js"></script>
 	<!-- Material Icon -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="dist/css/style.min.css">
+	<link rel="stylesheet" href="public/css/style.min.css">
 </head>
 
 <body>
 	<section id="validacion">
 		<div class="row">
 			<div class="col s12 center">
-				<img src="dist/img/phone.png" class="circle responsive-img" width="150x150">
+				<img src="public/img/phone.png" class="circle responsive-img" width="150x150">
 				<h5 solid>Para comenzar validamos tu número</h5>
 				<label>Recibirás un SMS con un código de validación</label>
 				<div class="row">
 					<form id="form-cellphone" class="col s10">
 						<div class="row caja">
 							<div>
-								<img src="dist/img/cellphone.png" class=" responsive-img left" width="20x20" alt="img-cellphome">
+								<img src="public/img/cellphone.png" class=" responsive-img left" width="20x20" alt="img-cellphome">
 							</div>
 							<label for="number">(+51)</label><input id="number" type="text" class="validate">
 						</div>
@@ -47,7 +47,7 @@
 	</section>
 
 
-	<script src="dist/js/script.js"></script>
+	<script src="public/js/script.js"></script>
 </body>
 
 </html>
