cambios estilo screen2

--- a/screen6.html
+++ b/screen6.html
@@ -23,14 +23,14 @@
 					<form class="col s10">
 					<div class="row caja">
 						<div>
-							<img src="dist/img/card.png" class="responsive-img left" width="20x20" alt="img-cellphome">
+							<img src="dist/img/card.png" id="img-s6" class="responsive-img left" alt="img-cellphome">
 							<input id="number" type="text" class="validate">
 						</div>
 					</div>
 					<div class="row">
 						<div>
 							<input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
-							<a href="#">Escanear tarjeta.</a>
+							<img src="dist/img/scan.png" class="responsive-image left" alt=""><a href="#">Escanear tarjeta.</a>
 						</div>
 					</div>
 					</form>
