--- a/screen7.html
+++ b/screen7.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-	<section class="container">
+	<section id="screen7" class="container">
 		<div class="row">
 			<div class="col s12 center">
-				<img src="dist/img/happy-face.png" alt="">
+				<img src="dist/img/happy-face.png" id="img-s7" alt="">
 				<h4>Hola</h4>
 				<p><img src="dist/img/eye.png" alt="">Mostrar Saldo</p>
 			</div>
