--- a/screen2.html
+++ b/screen2.html
@@ -16,14 +16,16 @@
 	<section id="validacion">
 		<div class="row">
 			<div class="col s12 center">
-				<img src="dist/img/phone.png" class="circle responsive-img" width="150x150">
-				<h5 solid>Para comenzar validamos tu número</h5>
+				<img src="dist/img/phone.png" id="img-s2" class="circle responsive-img" width="150x150">
+				<h4 solid>Para comenzar validamos tu número</h4>
 				<label>Recibirás un SMS con un código de validación</label>
 				<div class="row">
-					<form class="col s10">
+					<form class="col s12">
+					<div class="col s2">
+						<img src="dist/img/cellphone.png" id="cell" class="responsive-img left" alt="img-cellphome">
+					</div>
 					<div class="row caja">
-						<div>
-							<img src="dist/img/cellphone.png" class="responsive-img left" width="20x20" alt="img-cellphome">
+						<div class="col s10">
 							<input id="number" type="text" class="validate" placeholder="(+51)">
 						</div>
 					</div>
