--- a/screen2.html
+++ b/screen2.html
@@ -16,38 +16,38 @@
 	<section id="validacion">
 		<div class="row">
 			<div class="col s12 center">
-				<img src="public/img/phone.png" class="circle responsive-img" width="150x150">
-				<h5 solid>Para comenzar validamos tu número</h5>
+				<img src="public/img/phone.png" id="img-s2" class="circle responsive-img" width="150x150">
+				<h4 solid>Para comenzar validamos tu número</h4>
 				<label>Recibirás un SMS con un código de validación</label>
 				<div class="row">
-					<form id="form-cellphone" class="col s10">
+					<form class="col s12">
+						<div class="col s2">
+							<img src="public/img/cellphone.png" id="cell" class="responsive-img left" alt="img-cellphome">
+						</div>
 						<div class="row caja">
-							<div>
-								<img src="public/img/cellphone.png" class=" responsive-img left" width="20x20" alt="img-cellphome">
+							<div class="col s10">
+								<input id="number" type="text" class="validate" placeholder="(+51)">
 							</div>
-							<label for="number">(+51)</label><input id="number" type="text" class="validate">
 						</div>
 						<div class="row">
 							<div>
 								<input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
 								<label for="filled-in-box">Acepto los <a href="#" target="_blank">Términos y condiciones.</a>
-							</label>
+                            </label>
 							</div>
 						</div>
 					</form>
 				</div>
 				<div class="row">
 					<div class="col s12">
-						<button id="accept-continue" class="btn waves-effect waves-light yellow-button" type="submit" name="action">Continuar
-							</button>
-					</div>
+						<button id="accept-continue" class="btn waves-effect waves-light yellow-button" type="submit" name="action">Continuar</button>
+					 </div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-
-	<script src="public/js/script.js"></script>
+	<script src="public/js/script.js "></script>
 </body>
 
 </html>
