--- a/screen6.html
+++ b/screen6.html
@@ -13,7 +13,48 @@
 </head>
 
 <body>
-	
+	<section id="card">
+		<div class="row">
+			<div class="col s12 center">
+				<img src="public/img/bcp-logo.png" class="circle responsive-img" width="150x150">
+				<h5 solid>Registra tu tarjeta de débito BCP</h5>
+				<label>Por ahora sólo aceptamos cuentas de ahorro y/o corriente en soles</label>
+				<div class="row">
+					<form class="col s10">
+					<div class="row caja">
+						<div>
+							<img src="public/img/card.png" class="responsive-img left" width="20x20" alt="img-cellphome">
+							<input id="number" type="text" class="validate">
+						</div>
+					</div>
+					<div class="row">
+						<div>
+							<input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
+							<a href="#">Escanear tarjeta.</a>
+						</div>
+					</div>
+					</form>
+				</div>
+				<div class="row">
+					<div class="col s12">
+						<a href="#" class=" disabled btn-op waves-light btn">CONTINUAR</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col s6">
+						<label>Fecha de vencimiento</label>
+					</div>
+					<div class="col s3">
+						<input type="tel" placeholder="Mes">
+					</div>
+					<div class="col s3">
+						<input type="tel" placeholder="Año">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 
 
 	<script src="public/js/script.js"></script>
