--- a/screen7.html
+++ b/screen7.html
@@ -13,7 +13,38 @@
 </head>
 
 <body>
-	
+	<section class="container">
+		<div class="row">
+			<div class="col s12 center">
+				<img src="public/img/happy-face.png" alt="">
+				<h4>Hola</h4>
+				<p><img src="public/img/eye.png" alt="">Mostrar Saldo</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col s6">
+				<p>ÚLTIMOS MOVIMIENTOS</p>
+				<hr>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col s4">
+				<img src="public/img/icon.png" alt="">
+			</div>
+			<div class="col s8">
+				<p>¿Aún no realizas tu primer pago?</p>
+				<p>Es rápido y sencillo</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col s6">
+				<img src="public/img/send.png" alt="">
+			</div>
+			<div class="col s6">
+				<img src="public/img/code-qr.png" alt="">
+			</div>
+		</div>
+	</section>
 
 
 	<script src="public/js/script.js"></script>
