updated styles html 6 and 7

--- a/public/screen2.html
+++ b/public/screen2.html
@@ -9,20 +9,20 @@
 	<script src="https://use.fontawesome.com/fb4df1f3f2.js"></script>
 	<!-- Material Icon -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="public/css/style.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 	<section id="validacion">
 		<div class="row">
 			<div class="col s12 center">
-				<img src="public/img/phone.png" id="img-s2" class="circle responsive-img" width="150x150">
+				<img src="img/phone.png" id="img-s2" class="circle responsive-img" width="150x150">
 				<h4 solid>Para comenzar validamos tu número</h4>
 				<label>Recibirás un SMS con un código de validación</label>
 				<div class="row">
-					<form class="col s12">
+					<form id="form-cellphone" class="col s12">
 						<div class="col s2">
-							<img src="public/img/cellphone.png" id="cell" class="responsive-img left" alt="img-cellphome">
+							<img src="img/cellphone.png" id="cell" class="responsive-img left" alt="img-cellphome">
 						</div>
 						<div class="row caja">
 							<div class="col s10">
@@ -47,7 +47,7 @@
 		</div>
 	</section>
 
-	<script src="public/js/script.js "></script>
+	<script src="js/script.js "></script>
 </body>
 
 </html>
