--- a/public/screen7.html
+++ b/public/screen7.html
@@ -9,16 +9,16 @@
 	<script src="https://use.fontawesome.com/fb4df1f3f2.js"></script>
 	<!-- Material Icon -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="public/css/style.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 	<section class="container">
 		<div class="row">
 			<div class="col s12 center">
-				<img src="public/img/happy-face.png" alt="">
+				<img src="img/happy-face.png" alt="">
 				<h4>Hola</h4>
-				<p><img src="public/img/eye.png" alt="">Mostrar Saldo</p>
+				<p><img src="img/eye.png" alt="">Mostrar Saldo</p>
 			</div>
 		</div>
 		<div class="row">
@@ -29,7 +29,7 @@
 		</div>
 		<div class="row">
 			<div class="col s4">
-				<img src="public/img/icon.png" alt="">
+				<img src="img/icon.png" alt="">
 			</div>
 			<div class="col s8">
 				<p>¿Aún no realizas tu primer pago?</p>
@@ -38,16 +38,16 @@
 		</div>
 		<div class="row">
 			<div class="col s6">
-				<img src="public/img/send.png" alt="">
+				<img src="img/send.png" alt="">
 			</div>
 			<div class="col s6">
-				<img src="public/img/code-qr.png" alt="">
+				<img src="img/code-qr.png" alt="">
 			</div>
 		</div>
 	</section>
 
 
-	<script src="public/js/script.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
