--- a/public/screen5.html
+++ b/public/screen5.html
@@ -10,14 +10,14 @@
 	<script src="https://use.fontawesome.com/fb4df1f3f2.js"></script>
 	<!-- Material Icon -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="public/css/style.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="screen5-body">
 	<p class="done-circle"><i class="material-icons">done</i></p>
 	<p>¡Bien!</p>
 	<p>Ahora puedes usar Yape</p>
 	
-	<script src="public/js/script.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
