working first 2 ajax calls on index 2 & 3

--- a/public/screen3.html
+++ b/public/screen3.html
@@ -29,11 +29,10 @@
 				<h5>Ahora ingresa tu código</h5>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col s12 center">
-				<p>Enviamos un SMS con el código de validación<br>al número <b>997528963</b></p>
-			</div>
+		<div class="jsnumber">
+			<!--loading phone number with local storage-->
 		</div>
+
 		<br>
 		<br>
 		<div class="row">
