updated last changes

--- a/public/screen7.html
+++ b/public/screen7.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 	<meta charset="UTF-8">
@@ -13,39 +13,48 @@
 </head>
 
 <body>
-	<section class="container">
-		<div class="row">
-			<div class="col s12 center">
-				<img src="img/happy-face.png" alt="">
-				<h4>Hola</h4>
-				<p><img src="img/eye.png" alt="">Mostrar Saldo</p>
+	<section class="containers7">
+		<div class="container fluid">
+			<div class="row">
+				<div class="col s12 center">
+					<i class="fa fa-user-circle" aria-hidden="true"></i>
+					<img src="img/happy-face.png" id="img-face" alt="">
+					<h4 class="titulos7">Hola</h4>
+					<p class="mostrars7"><img src="img/eye.png" id="img-eye" alt=""> Mostrar Saldo</p>
+				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col s6">
-				<p>ÚLTIMOS MOVIMIENTOS</p>
-				<hr>
+		<div class="container fluid">
+			<div class="row">
+				<div class="col s12 center">
+					<p class="ultimos7">ÚLTIMOS MOVIMIENTOS <i class="fa fa-angle-right" aria-hidden="true"></i></p>
+					<hr class="lines7">
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col s4">
-				<img src="img/icon.png" alt="">
-			</div>
-			<div class="col s8">
-				<p>¿Aún no realizas tu primer pago?</p>
-				<p>Es rápido y sencillo</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col s6">
-				<img src="img/send.png" alt="">
-			</div>
-			<div class="col s6">
-				<img src="img/code-qr.png" alt="">
-			</div>
-		</div>
-	</section>
 
+		</div>
+		<div class="container fluid">
+			<div class="row">
+				<div class="col s6">
+					<img src="img/icon.png" alt="" class="imgs7">
+				</div>
+				<div class="col s6">
+					<p>¿Aún no realizas tu primer pago?</p>
+					<p>Es rápido y sencillo</p>
+				</div>
+			</div>
+			<div class="row boxend">
+				<div class="col s6 center">
+					<img src="img/send.png" id="img-send" alt="">
+					<p class="texts7">Enviar pago</p>
+				</div>
+				<div class="col s6 center">
+					<img src="img/code-qr.png" id="img-scn" alt="">
+					<p class="texts7">Recibir pago</p>
+				</div>
+			</div>
+		</div>		
+	</section>
 
 	<script src="js/script.js"></script>
 </body>
