--- a/public/screen2.html
+++ b/public/screen2.html
@@ -31,9 +31,10 @@
 						</div>
 						<div class="row">
 							<div>
-								<input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
-								<label for="filled-in-box">Acepto los <a href="#" target="_blank">Términos y condiciones.</a>
-                            </label>
+								<input type="checkbox" id="test5" class="icecream" />
+								<label for="test5">Acepto los<a href="#" target="_blank">Términos y condiciones.</a></label>
+
+
 							</div>
 						</div>
 					</form>
@@ -41,7 +42,7 @@
 				<div class="row">
 					<div class="col s12">
 						<button id="accept-continue" class="btn waves-effect waves-light yellow-button" type="submit" name="action">Continuar</button>
-					 </div>
+					</div>
 				</div>
 			</div>
 		</div>
