last style screen 4

--- a/public/screen4.html
+++ b/public/screen4.html
@@ -11,6 +11,7 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
 	<section id="createUser">
 		<div class="container">
@@ -25,20 +26,18 @@
 				<div class="col s12 m12 l12 xl12">
 					<div class="container-inputs">
 						<div class="row">
-							<form id="myform" class="col s12">
-								<div class="row">
-									<div class="input-field col s12">
-										<i class="prefix left"><img src="img/user.png" alt=""></i>
-										<input placeholder="Nombre" id="name" type="text">
-									</div>
-									<div class="input-field col s12">
-										<i class="prefix left"><img src="img/message-gray.png" alt=""></i>
-										<input placeholder="correo@ejemplo.com"  id="email" type="email">
-									</div>
-									<div class="input-field col s12">
-										<i class="prefix left"><img src="img/lock.png" alt=""></i>
-										<input placeholder="Ingresa clave de 6 digítos"   id="password" type="password" class="form-control" >		   	
-									</div>
+							<form id="myform">
+								<div class="input-field">
+									<i class="prefix left"><img  src="img/user.png" alt=""></i>
+									<input placeholder="Nombre" id="name" type="text">
+								</div>
+								<div class="input-field ">
+									<i class="prefix left"><img  src="img/message-gray.png" alt=""></i>
+									<input placeholder="correo@ejemplo.com" id="email" type="email">
+								</div>
+								<div class="input-field ">
+									<i class="prefix left"><img   src="img/lock.png" alt=""></i>
+									<input placeholder="Ingresa clave de 6 digítos" id="password" type="password" class="form-control">
 								</div>
 							</form>
 							<div class="col s12 m12 l12 center">
