last changes Mai

--- a/public/screen3.html
+++ b/public/screen3.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +10,6 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
-
 <body>
 	<div class="container">
 		<div class="row">
@@ -43,10 +41,12 @@
 				<input id="code" type="number" placeholder="-   -   -   -   -">
 			</div>
 		</div>
+		<div class="row">
+			<button class="aceptar-screen3">click</button>
+		</div>
 	</div>
 
 
 	<script src="js/script.js"></script>
 </body>
-
 </html>
