--- a/public/screen6.html
+++ b/public/screen6.html
@@ -11,54 +11,45 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
-
 <body>
-	<section id="card">
-		<div class="row">
-			<div class="col s12 center">
-				<img src="img/bcp-logo.png" class="circle responsive-img" width="150x150">
-				<h5 solid>Registra tu tarjeta de débito BCP</h5>
-				<label>Por ahora sólo aceptamos cuentas de ahorro y/o corriente en soles</label>
-				<div class="row formulario">
-					<form class="col s10">
-						<div class="row caja">
-							<div>
-								<img id="img-s6" src="img/card.png" class="responsive-img left" width="20x20" alt="img-cellphome">
-								<input id="number" type="text" class="validate">
-							</div>
-						</div>
-						<div class="row">
-							<div>
-								<input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
-								<a href="#">Escanear tarjeta.</a>
-							</div>
-						</div>
-					</form>
-				</div>
-				<div class="row">
-					<div class="col s12">
-						<a href="#" class=" disabled btn-op waves-light btn">CONTINUAR</a>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col s6">
-						<label>Fecha de vencimiento</label>
-					</div>
-					<div class="col s5">
-						<input type="tel" placeholder="Mes" id="mes">
-						/
-						<input type="tel" placeholder="Año" id="ano">
-
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</section>
-
-
-
-	<script src="js/script.js"></script>
+    <section id="card">
+        <div class="row">
+            <div class="col s12 center">
+                <img src="img/bcp-logo.png" id="img-lg" class="circle responsive-img">
+                <h5 solid>Registra tu tarjeta de débito BCP</h5>
+                <label>Por ahora sólo aceptamos cuentas de ahorro y/o corriente en soles</label>
+                <div class="row formulario">
+                    <form class="col s10">
+                    <div class="row caja">
+                        <div>
+                            <img src="img/card.png" id="img-s6" class="responsive-img left" alt="img-cellphome">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div>
+                            <input type="tel" id="new-tarjeta">
+                            <img src="img/scan.png" class="responsive-image center" alt="" id="img-scan"><a href="#"> Escanear tarjeta.</a>
+                        </div>
+                    </div>
+                    </form>
+                </div>
+                <div class="row date">
+                    <div class="col s5">
+                        <label>Fecha de vencimiento</label>
+                    </div>
+                    <div class="col s5">
+                        <input type="tel" placeholder="Mes" id="mes">
+                        /
+                        <input type="tel" placeholder="Año" id="ano">
+                    </div>
+                    
+                </div>
+                <div class="row">
+                    <button id="continue" class="btn waves-effect waves-light yellow-button" type="submit" name="action">Continuar</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="js/script.js"></script>
 </body>
-
 </html>
