--- a/public/screen6_1.html
+++ b/public/screen6_1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
@@ -9,21 +9,22 @@
 	<script src="https://use.fontawesome.com/fb4df1f3f2.js"></script>
 	<!-- Material Icon -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="dist/css/style.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
-
 <body>
     <section id="card-one">
         <div class="row">
             <div class="col s12 center">
-                <img src="dist/img/bcp-logo.png" id="foto" alt="">
+                <img src="img/bcp-logo.png" id="foto" alt="">
             </div>
         </div>
         <div class="row">
             <div class="col s12 center">
-            <h3>Ingresa la clave de tu tarjeta</h3>
-            <span>Tarjeta ****3263</span>
+                <h3>Ingresa la clave de tu tarjeta</h3>
             </div>
+        </div>
+        <div class="tarjeta-espacio">
+            <!--loading phone number with local storage-->
         </div>
         <div class="row">
             <div class="input-field col s12">
@@ -38,19 +39,16 @@
                         </div>
                     </div>
                 </div>
-                <img src="dist/img/lock.png" class="prefix" alt="">
-                <input id="password" type="password" class="validate center" placeholder="****">
+                <img src="img/lock.png" class="prefix" alt="">
+                <input id="passwod" type="password" class="validate center" placeholder="****">
             </div>
         </div>
         <div class="row">
             <div class="col s12 center">
-                <a href="" class="btn disabled">registrar</a>
+                <button id="continue-profile" class="btn waves-effect waves-light yellow-button" type="submit" name="action">Continuar</button>
             </div>
         </div>
 </section>
-
-
-	<script src="dist/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
-
 </html>
