working with setTimeOt counter

--- a/public/screen4.html
+++ b/public/screen4.html
@@ -29,9 +29,9 @@
 							<form id="myform">
 								<div class="input-field">
 									<i class="prefix left"><img  src="img/user.png" alt=""></i>
-									<input placeholder="Nombre" id="name" type="text">
+									<input placeholder="Nombre" id="firstname" type="text">
 								</div>
-								<div class="input-field ">
+								<div class="input-field">
 									<i class="prefix left"><img  src="img/message-gray.png" alt=""></i>
 									<input placeholder="correo@ejemplo.com" id="email" type="email">
 								</div>
