--- a/public/screen7.html
+++ b/public/screen7.html
@@ -16,7 +16,7 @@
 	<section class="containers7">
 		<div class="container fluid">
 			<div class="row">
-				<div class="col s12 center">
+				<div class="col s12 center firstcont">
 					<i class="fa fa-user-circle" aria-hidden="true"></i>
 					<img src="img/happy-face.png" id="img-face" alt="">
 					<h4 class="titulos7">Hola</h4>
@@ -26,7 +26,7 @@
 		</div>
 		<div class="container fluid">
 			<div class="row">
-				<div class="col s12 center">
+				<div class="col s12 center barras7">
 					<p class="ultimos7">ÚLTIMOS MOVIMIENTOS <i class="fa fa-angle-right" aria-hidden="true"></i></p>
 					<hr class="lines7">
 				</div>
